tests/bug_detector_tests/strictModeR10.test
################################################################################
#    Copyright (c) 2013, KAIST.
#    All rights reserved.
#
#    Use is subject to license terms.
#
#    This distribution may include materials developed by third parties.
################################################################################
tests=strictModeR10
BUGDETECTOR_TESTS_DIR=${JS_HOME}/tests/bug_detector_tests
bug-detector
bug-detector_out_WCIequals=\
${BUGDETECTOR_TESTS_DIR}/strictModeR10.js:4:16-33: \n\
    IRGetProp, IRSetProp is not supported. \n\
${BUGDETECTOR_TESTS_DIR}/strictModeR10.js:4:36-58: \n\
    IRGetProp, IRSetProp is not supported. \n\
${BUGDETECTOR_TESTS_DIR}/strictModeR10.js:10:20-37: \n\
    IRGetProp, IRSetProp is not supported. \n\
${BUGDETECTOR_TESTS_DIR}/strictModeR10.js:10:40-62: \n\
    IRGetProp, IRSetProp is not supported. \n\
File ${BUGDETECTOR_TESTS_DIR}/strictModeR10.js has 4 errors. \n\
 \n\
* Bug Detector * \n\
strictModeR10.js:4:26~4:30: [SyntaxError] 'eval' cannot be used as an identifier of the formal parameter within strict mode code. \n\
strictModeR10.js:4:46~4:55: [SyntaxError] 'arguments' cannot be used as an identifier of the formal parameter within strict mode code. \n\
strictModeR10.js:5:16~5:20: [SyntaxError] 'eval' cannot be used as an identifier of the property assignment within strict mode code. \n\
strictModeR10.js:5:25~5:34: [SyntaxError] 'arguments' cannot be used as an identifier of the property assignment within strict mode code. \n\
strictModeR10.js:6:16~6:21: [SyntaxError] 'eval' cannot be used as an identifier of the property assignment within strict mode code. \n\
strictModeR10.js:6:27~6:37: [SyntaxError] 'arguments' cannot be used as an identifier of the property assignment within strict mode code. \n\
 \n\
============== Total Count ============== \n\
|  RangeErrors       :      0 (  0.00%) | \n\
|  ReferenceErrors   :      0 (  0.00%) | \n\
|  SyntaxErrors      :      6 (100.00%) | \n\
|  TypeErrors        :      0 (  0.00%) | \n\
|  URIErrors         :      0 (  0.00%) | \n\
|  Warnings          :      0 (  0.00%) | \n\
========================================= \n\
============ Statistics ============= \n\
|  AbsentRead              :      0 | \n\
|  BinaryOperator          :      0 | \n\
|  BuiltinTypeError        :      0 | \n\
|  BuiltinWrongArgType     :      0 | \n\
|  CallConstFunc           :      0 | \n\
|  CallNonConstructor      :      0 | \n\
|  CallNonFunction         :      0 | \n\
|  ConditionalBranch       :      0 | \n\
|  ConvertToNumber         :      0 | \n\
|  DefaultValue            :      0 | \n\
|  Deprecated              :      0 | \n\
|  FunctionArgSize         :      0 | \n\
|  GlobalThis              :      0 | \n\
|  ImplicitTypeConversion  :      0 | \n\
|  AccessingNullOrUndef    :      0 | \n\
|  PrimitiveToObject       :      0 | \n\
|  RangeError              :      0 | \n\
|  Shadowing               :      0 | \n\
|  StrictMode              :      6 | \n\
|  UncalledFunction        :      0 | \n\
|  UnreachableCode         :      0 | \n\
|  ValueNeverRead          :      0 | \n\
|  VaryingTypeArguments    :      0 | \n\
|  WrongThisType           :      0 | \n\
|  RegularExpression       :      0 | \n\
|  WrongArgument           :      0 | \n\
===================================== \n\
\n
bug-detector_err_equals=
